(lang dune 3.0)

(name stomp)

(generate_opam_files true)

(source
 (github amonsh1/ocaml-stomp))

(authors "amon-shi")

(maintainers "amon-shi")

(license MIT)

(package
 (name stomp)
 (synopsis "Stomp protocol client")
 (description "Stomp protocol client")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
